<resources>

    <string name="app_name">SecretAgent</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="wifi_test">WiFi test</string>
    <string name="agent">Agent test</string>
    <string name="guard">Guard test</string>
    <string name="title_activity_locator">LocatorActivity</string>
    <string name="title_activity_players_setup">Set up teams</string>
    <string name="host_game">CREATE GAME</string>
    <string name="connect_game">JOIN GAME</string>
    <string name="run_game">PLAY!</string>
    <string name="title_activity_agent">AgentActivity</string>
    <string name="target">Your next target</string>
    <string name="map">Map</string>
    <string name="surrender">Surrender</string>
    <string name="briefing">Briefing</string>
    <string name="camera">Camera</string>
    <string name="too_many_agents">Too many agents in game</string>
    <string name="no_agent_in_game">At least one agent must play</string>
    <string name="mission001_title">Challenge accepted</string>
    <string name="mission001_briefing">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis vestibulum sem. Aliquam non enim velit, ac tempus risus. Pellentesque purus est, molestie eu ultrices vitae, congue non eros. Mauris sodales justo quis orci vehicula convallis. Nam ut nisl non risus laoreet elementum vel sit amet nibh. Nunc et porttitor risus. Suspendisse quis volutpat eros. Pellentesque vitae egestas arcu. Cras interdum dignissim enim, eu pharetra quam scelerisque a. Nulla interdum fringilla augue id aliquam. Quisque quis cursus nisl. Etiam mauris velit, iaculis sed facilisis eget, lobortis non massa. Nulla sit amet molestie velit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</string>
    <string name="mission666_title">Stay awake!</string>
    <string name="mission666_briefing">Evil is lurking around!\nKeep your eyes wide open, this may be your only chance to win the contest. Do NOT fall asleep!\n\nGo find some energy SHOCK ASAP.</string>
    <string name="close">Close</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="mission667_title">H2O</string>
    <string name="mission667_briefing">Saguaro water</string>
    <string name="mission668_title">Tom and Jerry</string>
    <string name="mission668_briefing">Lenovo mouse</string>

    <item name="idWidth" type="id"/>
    <item name="idHeight" type="id"/>
    <item name="imgFloorIndex" type="id"/>

    <string name="exit">EXIT</string>
    <string name="you">you</string>
    <string name="achievments">ACHIEVMENTS</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="quit_confirm">Do you really want to stop playing this awesome game?</string>
    <string name="abort_game_title">Game in progress</string>
    <string name="abort_game_text">Do you really want to abort the current game?</string>
    <string name="continue_game">RESUME GAME</string>
    <string name="server_ip">Server IP</string>
    <string name="title_activity_achievments">AchievmentsActivity</string>
    <string name="achievment_done">Completed</string>
    <string name="achievment001_title">Shocked!</string>
    <string name="achievment_not_done">Not completed</string>
    <string name="achievment002_title">Yo dawg, I heard you like me</string>

    <string name="mission003_title">Najdi tento záběr a vyfoť ho!</string>
    <string name="mission003_briefing">Lorem ipsum</string>
    <string name="mission002_title">Dveře do neznáma</string>
    <string name="mission002_briefing">Podaří se Ti je nalézt? Dovnitř ale nechoď! Jedná se o náročnější úkol. Dostaneše tedy 10b  navíc.</string>
    <string name="mission004_title">Kamenný erb</string>
    <string name="mission004_briefing">Restaurovaný kamenný erb (výška : 160cm)</string>
    <string name="mission005_title">Tanec Smrti</string>
    <string name="mission005_briefing">Hrdinům našeho příběhu již nikdo neřekne jinak než jejich vojáckými přezdívkami: Tulák, Mrzák, Kazatel, Zemánek a Cizinec. Svá jména snad už zapomněli. Narodili se na úsvitu husitské revoluce. Vyrostli mezi profesionálními vojáky a tento úděl se jim stal osudem i prokletím.</string>

    <string name="mission_acomplished">Mission acomplished</string>
    <string name="next_round">NEXT ROUND</string>
    <string name="mission_failed">Mission failed</string>


</resources>